tests/invalid/function_unexpected_keyword_arg/main.py
def add(a: int, b: int) -> int:
    return a + b

if __name__ == "__main__":
    x: int = add(1, c=2)
